UML-Editor 3.6.0 (2014-11-xx) 
----------------------------------
- unwrap multivalue struct attrs to normal uml attrs
- iliimp: import interlis struct attrs as uml attrs

UML-Editor 3.5.2 (2013-09-04) 
----------------------------------
- bug: fixed exception if reading some uml-files (because Name of TaggedValue is not yet set)

UML-Editor 3.5.1 (2013-09-02) 
----------------------------------
- bug iliexp: fixed NullPointerException if export to an illegal path
- keep ordering of ModelDef/IMPORTS
- keep ordering of TaggedValues
- keep ordering of Constraints
- bug: keep documentation of constraints after classdef edits 
- ili2c-4.4.14

UML-Editor 3.5.0 (2013-04-06) 
----------------------------------
- added fields furtherInformation, technicalContact, IDGeoIV on ModelDef dialog

UML-Editor 3.4.3 (2012-11-12) 
----------------------------------
- fixed encoding of properties/translations in sebase

UML-Editor 3.4.2 (2012-08-08) 
----------------------------------
- fixed encoding of properties/translations
- ili2c-4.4.7

UML-Editor 3.4.1 (2012-01-26) 
----------------------------------
- bug gui: encoding of resources in sebase corrected
- bug iliimp: wrong multiplicity if MANDATORY BOOLEAN

UML-Editor 3.4.0 (2011-12-29) 
----------------------------------
- FILE FORMAT CHANGED: 
-   This version can read old file format, but may generate an incorrect ili.
-   Old versions can read new file format with loss and may generate an incorrect ili.
- bug gui: fixed specialization/extension of classdef/domaindef/topicdef
- enable modeling of ili struct attr and ili ref attr as UML attribute
- ili2c-4.4.2

UML-Editor 3.3.1 (2011-11-10) 
----------------------------------
- JRE 1.6 required
- ili2c-4.4.1
- make use of repositories when importing ili-files 
- make use of repositories during model check 
- import ili-files from repositories as "<model.ili>" to prevent later export